--- a/index-2(innerHTML).html
+++ b/index-2(innerHTML).html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JS-Examples</title>
+    <link rel="stylesheet" href="./CSS/style-2.css" />
+    <title>Document</title>
   </head>
   <body>
-    <script src="./js/modul-4-callback.js"></script>
+    <section>
+      <h2>Popular technologies</h2>
+      <ul class="list"></ul>
+    </section>
+
+    <script src="./js/2.js"></script>
   </body>
 </html>
